# ip-filter

./: .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Procfile  README.md  asim_formatter.py  buildpack.json  buildspec.yml  codecov.yml  config.py  docker-compose.yml  main.py  pyproject.toml  release-config.json  requirements.in  requirements.txt  requirements_test.in  requirements_test.txt  run.sh  settings.py  tests.py  utils.py
.copilot/: config.yml
.copilot/phases/: build.sh  install.sh  post_build.sh  pre_build.sh
.github/workflows/: python-unit-tests.yml  tests.yml
codebuild/: buildspec.yml  process.yml
djtest/: Dockerfile
djtest/config/: settings.py
tests/: conftest.py  test_config.py  test_main.py
