[tool.poetry]
name = "ip-filter"
version = "2.0.2"
description = ""
authors = ["Department for Business and Trade Platform Team <sre-team@digital.trade.gov.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.3.2"
urllib3 = "2.2.2"
jinja2 = "^3.1.4"
pyyaml = "^6.0.1"
schema = "^0.7.5"
toml = "^0.10.2"
flask-caching = "^2.1.0"
dbt-copilot-python = "^0.2.0"
sentry-sdk = {extras = ["flask"], version = "^2.8.0"}
aiohttp = "^3.11.11"
aiohttp-jinja2 = "^1.6"
aiohttp-cache = "^4.0.1"
aiocache = "^0.12.3"
python-dotenv = "^1.0.1"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.5.0"
multiprocess = "^0.70.14"
parameterized = "^0.9.0"
pre-commit = "^3.5.0"
smart-open = "^6.3.0"
ipython = "^8.20.0"
pytest = "^7.4.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
