[tool.poetry]
name = "ip-filter"
version = "2.1.5"
description = ""
authors = ["Department for Business and Trade Platform Team <sre-team@digital.trade.gov.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "3.1.0"
gunicorn = "^23.0.0"
urllib3 = "2.2.2"
jinja2 = "^3.1.6"
pyyaml = "^6.0.1"
schema = "^0.7.5"
toml = "^0.10.2"
flask-caching = "^2.1.0"
dbt-copilot-python = "^0.2.3"
sentry-sdk = {extras = ["flask"], version = "^2.28.0"}
gevent = "^24.2.1"
ddtrace = "^3.4.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.8.0"
multiprocess = "^0.70.14"
parameterized = "^0.9.0"
pre-commit = "^4.2.0"
smart-open = "^7.1.0"
ipython = "^9.1.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
